{
  "version": 4,
  "terraform_version": "1.0.8",
  "serial": 22,
  "lineage": "a981d70f-7522-d88f-b894-efcb6d449e3e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "maxfacts-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:025081378045:loadbalancer/app/maxfacts-staging/9d2914476a6a6071",
            "arn_suffix": "app/maxfacts-staging/9d2914476a6a6071",
            "dns_name": "maxfacts-staging-1243642643.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:025081378045:loadbalancer/app/maxfacts-staging/9d2914476a6a6071",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "maxfacts-staging",
            "security_groups": [
              "sg-09aa2a85b4104cc06"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-024c01d4eb8b5e925"
              },
              {
                "subnet_id": "subnet-02bf82218a34d9098"
              },
              {
                "subnet_id": "subnet-0a9e431981e58ec62"
              }
            ],
            "subnets": [
              "subnet-024c01d4eb8b5e925",
              "subnet-02bf82218a34d9098",
              "subnet-0a9e431981e58ec62"
            ],
            "tags": {
              "application": "maxfacts",
              "classification": "elb",
              "subclassification": "application-load-balancer"
            },
            "tags_all": {
              "application": "maxfacts",
              "classification": "elb",
              "subclassification": "application-load-balancer"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-0e617397cfa462594",
            "zone_id": "Z32O12XQLNTSW2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "maxfacts-lb-listener-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:025081378045:listener/app/maxfacts-staging/9d2914476a6a6071/25168c45487a50dc",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:025081378045:listener/app/maxfacts-staging/9d2914476a6a6071/25168c45487a50dc",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:025081378045:loadbalancer/app/maxfacts-staging/9d2914476a6a6071",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": {
              "read": null
            }
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "maxfacts-lb-listener-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:025081378045:listener/app/maxfacts-staging/9d2914476a6a6071/d6513fb36f0903a7",
            "certificate_arn": "arn:aws:acm:eu-west-1:025081378045:certificate/b84a30cc-ba74-463f-8d9e-6392bfc939c9",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:025081378045:targetgroup/maxfacts/70e898737aec3668",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:025081378045:listener/app/maxfacts-staging/9d2914476a6a6071/d6513fb36f0903a7",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:025081378045:loadbalancer/app/maxfacts-staging/9d2914476a6a6071",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "timeouts": {
              "read": null
            }
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "maxfacts-lb-target-group-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:025081378045:targetgroup/maxfacts/70e898737aec3668",
            "arn_suffix": "targetgroup/maxfacts/70e898737aec3668",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:025081378045:targetgroup/maxfacts/70e898737aec3668",
            "load_balancing_algorithm_type": "round_robin",
            "name": "maxfacts",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0e617397cfa462594"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "maxfacts-network-acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:025081378045:network-acl/acl-0660f6ed0b4b8e902",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0660f6ed0b4b8e902",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "025081378045",
            "subnet_ids": [
              "subnet-024c01d4eb8b5e925",
              "subnet-02bf82218a34d9098",
              "subnet-0a9e431981e58ec62"
            ],
            "tags": {
              "application": "maxfacts"
            },
            "tags_all": {
              "application": "maxfacts"
            },
            "vpc_id": "vpc-0e617397cfa462594"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.maxfacts-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "maxfacts-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:025081378045:route-table/rtb-055f054b0b81566dd",
            "id": "rtb-055f054b0b81566dd",
            "owner_id": "025081378045",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fd7c4d8af961d075",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "application": "maxfacts"
            },
            "tags_all": {
              "application": "maxfacts"
            },
            "timeouts": {
              "create": null,
              "delete": null,
              "update": null
            },
            "vpc_id": "vpc-0e617397cfa462594"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.maxfacts-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "maxfacts-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:025081378045:security-group/sg-06d616ac558892307",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06d616ac558892307",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Mongo",
                "from_port": 27017,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 27017
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "default",
            "name_prefix": "",
            "owner_id": "025081378045",
            "revoke_rules_on_delete": null,
            "tags": {
              "application": "maxfacts"
            },
            "tags_all": {
              "application": "maxfacts"
            },
            "timeouts": {
              "create": null,
              "delete": null
            },
            "vpc_id": "vpc-0e617397cfa462594"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "maxfacts-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:025081378045:vpc/vpc-0e617397cfa462594",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0660f6ed0b4b8e902",
            "default_route_table_id": "rtb-055f054b0b81566dd",
            "default_security_group_id": "sg-06d616ac558892307",
            "dhcp_options_id": "dopt-e1645c87",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0e617397cfa462594",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-055f054b0b81566dd",
            "owner_id": "025081378045",
            "tags": {
              "application": "maxfacts"
            },
            "tags_all": {
              "application": "maxfacts"
            }
          }
        }
      ]
    }
  ]
}